# sphare

./: Cargo.toml  Dockerfile  README.md  input.css  package-lock.json
.github/workflows/: docker-publish.yml
end2end/tests/: example.spec.ts
lib/components/app/: Cargo.toml
lib/components/app/src/: app.rs  home.rs
lib/components/base/: Cargo.toml
lib/components/base/src/: comment.rs  embed.rs  filter.rs  moderation.rs  post.rs  ranking.rs  rule.rs  search.rs  sphere.rs  sphere_category.rs
lib/components/common/: Cargo.toml
lib/components/common/src/: auth_widget.rs  notification.rs  role.rs  sphere.rs  state.rs  user.rs
lib/components/content/: Cargo.toml
lib/components/content/src/: comment.rs  moderation.rs  post.rs  profile.rs  ranking.rs
lib/components/sphere/: Cargo.toml
lib/components/sphere/src/: rule.rs  satellite.rs  sphere.rs  sphere_category.rs  sphere_management.rs
lib/components/ui/: Cargo.toml
lib/components/ui/src/: navigation_bar.rs  policy.rs  search.rs  sidebar.rs
lib/components/utils/: Cargo.toml
lib/components/utils/src/: colors.rs  editor.rs  errors.rs  icons.rs  unpack.rs  widget.rs
lib/core/common/: Cargo.toml
lib/core/common/src/: checks.rs  constants.rs  editor.rs  routes.rs
lib/core/content/: Cargo.toml
lib/core/content/src/: comment.rs  embed.rs  moderation.rs  post.rs  profile.rs  ranking.rs  search.rs
lib/core/sphere/: Cargo.toml
lib/core/sphere/src/: rule.rs  satellite.rs  sphere.rs  sphere_category.rs  sphere_management.rs
lib/core/tests/: Cargo.toml
lib/core/tests/tests/: test_auth.rs  test_comment.rs  test_embed.rs  test_moderation.rs  test_notification.rs  test_post.rs  test_profile.rs  test_ranking.rs  test_role.rs  test_rule.rs  test_satellite.rs  test_search.rs  test_sphere.rs  test_sphere_category.rs  test_sphere_management.rs  test_user.rs
lib/core/tests/tests/common/: mod.rs
lib/core/tests/tests/data_factory/: mod.rs
lib/core/tests/tests/utils/: mod.rs
lib/core/user/: Cargo.toml
lib/core/user/src/: auth.rs  notification.rs  role.rs  session.rs  user.rs
lib/interfaces/content/: Cargo.toml
lib/interfaces/content/src/: comment.rs  moderation.rs  post.rs  profile.rs  ranking.rs  search.rs
lib/interfaces/sphere/: Cargo.toml
lib/interfaces/sphere/src/: rule.rs  satellite.rs  sphere.rs  sphere_category.rs  sphere_management.rs
lib/interfaces/user/: Cargo.toml
lib/interfaces/user/src/: auth.rs  notification.rs  role.rs  user.rs
locales/en/: main.ftl
locales/fr/: main.ftl
migrations/: 20230813170719_init.up.sql
setup/: dev-sharesphere-realm-export-2026-04-12.json  docker-compose.yml
style/: main.scss
