[workspace]
resolver = "2"
members = [
    "lib/core/common",
    "lib/core/user",
    "lib/core/sphere",
    "lib/core/content",
    "lib/core/tests",
    "lib/interfaces/user",
    "lib/interfaces/sphere",
    "lib/interfaces/content",
    "lib/components/utils",
    "lib/components/common",
    "lib/components/base",
    "lib/components/sphere",
    "lib/components/content",
    "lib/components/ui",
    "lib/components/app",
    "bin/frontend",
    "bin/server",
]

# profile for wasm build, optimizes size
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1

[workspace.dependencies]
leptos = { version = "0.8.19", features = ["nightly", "nonce", "multipart"] }
leptos_meta = { version = "0.8.6" }
leptos_router = { version = "0.8.13", features = ["nightly"] }
leptos_axum = { version = "0.8.9" }

leptos-fluent = { version = "0.3.1", features = ["json"] }
leptos-use = { version = "0.18.3", features = ["signal_debounced", "signal_throttled", "storage", "use_breakpoints", "use_clipboard", "use_interval_fn", "use_permission", "use_web_notification", "use_element_hover", "use_timeout_fn"] }

ammonia = "4.1.2"
anyhow = "*"
async-trait = "*"
axum = {  version = "0.8.9", features = [ "macros" ] }
axum_session = { version = "0.20.0" }
axum_session_auth = { version = "0.20.0" }
axum_session_sqlx = { version = "0.9.0" }
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
const_format = "0.2.36"
chrono = { version = "0.4.44", features = [ "alloc", "serde" ] }
getrandom = { version = "0.3.4" } # only to fix build issue with wasm_js feature
gloo-net = { version = "0.7.0", features = ["http"] }
http = "1.4.0"
image = "0.25.10"
infer = "0.19.0"
log = "0.4.29"
lru = "0.18.0"
markdown = "1.0.0"
mime_guess = "2.0.5"
object_store = {  version = "0.13.2", features = ["aws"] }
openidconnect = "4.0.1"
quick-xml = "0.39.2"
reqwest = { version = "0.12.24", features = ["json"] }
send_wrapper = { version = "0.6.0", features = ["futures"] }
serde = { version = "*", features = ["derive"] }
serde_json = "1.0.149"
simple_logger = "5.2.0"
sqlx = { version = "0.8.6", features = [ "chrono", "postgres", "runtime-tokio", "tls-rustls" ] }
strum = "0.28.0"
strum_macros = "0.28.0"
thiserror = "2.0.18"
tokio = { version = "1.51.0", features = ["rt-multi-thread"] }
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.6.8", features = ["fs"] }
url = "*"
validator = { version = "0.20.0", features = ["derive"] }
wasm-bindgen = "=0.2.120"
web-sys = "0.3.97"
webp = "0.3.1"

# See https://github.com/akesson/cargo-leptos for documentation of all the parameters.

# A leptos project defines which workspace members
# that are used together frontend (lib) & server (bin)
[[workspace.metadata.leptos]]
# this name is used for the wasm, js and css file names
name = "sphare"

# the package in the workspace that contains the server binary (binary crate)
bin-package = "server"

# the package in the workspace that contains the frontend wasm binary (library crate)
lib-package = "frontend"

# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/site"

# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"

# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
style-file = "style/main.scss"

# Assets source dir. All files found here will be copied and synchronized to site-root.
# The assets-dir cannot have a subdirectory with the same name/path as site-pkg-dir.
#
# Optional. Env: LEPTOS_ASSETS_DIR.
assets-dir = "public"

# The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
site-addr = "127.0.0.1:3000"

# The port to use for automatic reload monitoring
reload-port = 3001

# [Optional] Command to use when running end2end tests. It will run in the end2end dir.
#   [Windows] for non-WSL use "npx.cmd playwright test"
#   This binary name can be checked in Powershell with Get-Command npx
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"

#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"

# The features to use when compiling the bin target
#
# Optional. Can be over-ridden with the command line parameter --bin-features
bin-features = []

# If the --no-default-features flag should be used when compiling the bin target
#
# Optional. Defaults to false.
bin-default-features = false

# The features to use when compiling the lib target
#
# Optional. Can be over-ridden with the command line parameter --lib-features
lib-features = []

# If the --no-default-features flag should be used when compiling the lib target
#
# Optional. Defaults to false.
lib-default-features = false

# The profile to use for the lib target when compiling for release
#
# Optional. Defaults to "release".
lib-profile-release = "wasm-release"

watch-additional-files = ["locales"]  # Relative to Cargo.toml
