[package]
name = "sphare_app"
version = "0.1.0"
edition = "2024"
description = "Root of the Sphare app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sphare_core_common = { path = "../../core/common", default-features = false }
sphare_core_content = { path = "../../core/content", default-features = false }
sphare_iface_user = { path = "../../interfaces/user", default-features = false }
sphare_iface_sphere = { path = "../../interfaces/sphere", default-features = false }
sphare_iface_content = { path = "../../interfaces/content", default-features = false }
sphare_cmp_utils = { path = "../utils", default-features = false }
sphare_cmp_common = { path = "../common", default-features = false }
sphare_cmp_base = { path = "../base", default-features = false }
sphare_cmp_sphere = { path = "../sphere", default-features = false }
sphare_cmp_content = { path = "../content", default-features = false }
sphare_cmp_ui = { path = "../ui", default-features = false }

leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true

axum = { workspace = true, optional = true}
const_format.workspace = true
leptos-fluent.workspace = true
leptos-use.workspace = true
log.workspace = true
regex = "1.12.3"

[build-dependencies]
serde_json.workspace = true
url.workspace = true

[features]
default = []
hydrate = [
    "leptos/hydrate",
    "sphare_iface_user/hydrate",
    "sphare_iface_sphere/hydrate",
    "sphare_iface_content/hydrate",
    "sphare_cmp_utils/hydrate",
    "sphare_cmp_common/hydrate",
    "sphare_cmp_base/hydrate",
    "sphare_cmp_sphere/hydrate",
    "sphare_cmp_content/hydrate",
    "sphare_cmp_ui/hydrate",
]
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "leptos-fluent/axum",
    "leptos-fluent/ssr",
    "sphare_core_common/ssr",
    "sphare_core_content/ssr",
    "sphare_iface_user/ssr",
    "sphare_iface_sphere/ssr",
    "sphare_iface_content/ssr",
    "sphare_cmp_utils/ssr",
    "sphare_cmp_common/ssr",
    "sphare_cmp_base/ssr",
    "sphare_cmp_sphere/ssr",
    "sphare_cmp_content/ssr",
    "sphare_cmp_ui/ssr",
    "dep:axum",
]
