[package]
name = "sphare_cmp_common"
version = "0.1.0"
edition = "2024"
description = "Common components and states"

[dependencies]
sphare_core_common = { path = "../../core/common", default-features = false }
sphare_core_user = { path = "../../core/user", default-features = false }
sphare_core_sphere = { path = "../../core/sphere", default-features = false }
sphare_core_content = { path = "../../core/content", default-features = false }
sphare_iface_user = { path = "../../interfaces/user", default-features = false }
sphare_iface_sphere = { path = "../../interfaces/sphere", default-features = false }
sphare_iface_content = { path = "../../interfaces/content", default-features = false }
sphare_cmp_utils = { path = "../utils", default-features = false }

leptos.workspace = true
leptos_router.workspace = true

leptos-fluent.workspace = true
leptos-use.workspace = true

log.workspace = true
serde.workspace = true
web-sys.workspace = true

[features]
default = []
hydrate = [
    "leptos/hydrate",
    "sphare_iface_user/hydrate",
    "sphare_iface_sphere/hydrate",
    "sphare_iface_content/hydrate",
    "sphare_cmp_utils/hydrate",
]
ssr = [
    "leptos/ssr",
    "leptos-fluent/axum",
    "leptos-fluent/ssr",
    "leptos-use/ssr",
    "sphare_iface_user/ssr",
    "sphare_iface_sphere/ssr",
    "sphare_iface_content/ssr",
    "sphare_cmp_utils/ssr",
]

