[package]
name = "sphare_cmp_sphere"
version = "0.1.0"
edition = "2024"
description = "Sphere related components"

[dependencies]
sphare_core_common = { path = "../../core/common", default-features = false }
sphare_core_user = { path = "../../core/user", default-features = false }
sphare_core_sphere = { path = "../../core/sphere", default-features = false }
sphare_core_content = { path = "../../core/content", default-features = false }
sphare_iface_user = { path = "../../interfaces/user", default-features = false }
sphare_iface_sphere = { path = "../../interfaces/sphere", default-features = false }
sphare_iface_content = { path = "../../interfaces/content", default-features = false }
sphare_cmp_utils = { path = "../utils", default-features = false }
sphare_cmp_common = { path = "../common", default-features = false }
sphare_cmp_base = { path = "../base", default-features = false }

leptos.workspace = true
leptos_router.workspace = true


leptos-fluent.workspace = true
leptos-use.workspace = true

chrono.workspace = true
log.workspace = true
url.workspace = true
web-sys.workspace = true

strum.workspace = true

[features]
default = []
hydrate = [
    "leptos/hydrate",
    "sphare_iface_user/hydrate",
    "sphare_iface_sphere/hydrate",
    "sphare_iface_content/hydrate",
    "sphare_cmp_utils/hydrate",
    "sphare_cmp_common/hydrate",
    "sphare_cmp_base/hydrate",
]
ssr = [
    "leptos/ssr",
    "leptos_router/ssr",
    "leptos-fluent/axum",
    "leptos-fluent/ssr",
    "leptos-use/ssr",
    "sphare_core_common/ssr",
    "sphare_core_content/ssr",
    "sphare_core_user/ssr",
    "sphare_core_sphere/ssr",
    "sphare_iface_user/ssr",
    "sphare_iface_sphere/ssr",
    "sphare_iface_content/ssr",
    "sphare_cmp_utils/ssr",
    "sphare_cmp_common/ssr",
    "sphare_cmp_base/ssr",
]

