[package]
name = "sphare_cmp_utils"
version = "0.1.0"
edition = "2024"
description = "Utility components"

[dependencies]
sphare_core_common = { path = "../../core/common", default-features = false }

leptos.workspace = true
leptos_router.workspace = true
leptos_axum = { workspace = true, optional = true }

leptos-fluent.workspace = true
leptos-use.workspace = true

chrono.workspace = true
const_format.workspace = true
getrandom = { workspace = true, optional = true }
http.workspace = true
log.workspace = true
strum.workspace = true
web-sys.workspace = true

[features]
default = []
hydrate = [
    "leptos/hydrate",
    "getrandom/wasm_js",
    "dep:getrandom",
]
ssr = [
    "leptos/ssr",
    "leptos_router/ssr",
    "leptos-fluent/axum",
    "leptos-fluent/ssr",
    "leptos-use/ssr",
    "dep:leptos_axum",
]

