[package]
name = "sphare_core_common"
version = "0.1.0"
edition = "2024"
description = "Utility structs and functions"

[dependencies]
leptos.workspace = true
leptos_router.workspace = true

leptos-fluent.workspace = true

anyhow = { workspace = true, optional = true }
chrono.workspace = true
const_format.workspace = true
http.workspace = true
log.workspace = true
markdown.workspace = true
openidconnect = { workspace = true, optional = true }
quick-xml.workspace = true
reqwest = { workspace = true, optional = true }
serde.workspace = true
sqlx = { workspace = true, optional = true }
serde_json.workspace = true
strum.workspace = true
strum_macros.workspace = true
thiserror.workspace = true
tokio = { workspace = true, optional = true }
url.workspace = true
validator.workspace = true
web-sys.workspace = true

[dev-dependencies]
fluent-templates = "0.13.3"
indoc = "2.0.7"
sealed_test = "1.1.0"

[features]
default = []
ssr = [
    "leptos/ssr",
    "dep:anyhow",
    "dep:openidconnect",
    "dep:reqwest",
    "dep:sqlx",
    "dep:tokio",
]

