[package]
name = "sphare_core_content"
version = "0.1.0"
edition = "2024"
description = "Content related (posts, comments) structs and functions"

[dependencies]
sphare_core_common = { path = "../common", default-features = false }
sphare_core_user = { path = "../user", default-features = false }
sphare_core_sphere = { path = "../sphere", default-features = false }

leptos.workspace = true

leptos-fluent.workspace = true
leptos-use.workspace = true

ammonia.workspace = true
chrono.workspace = true
gloo-net.workspace = true
http = { workspace = true, optional = true }
log.workspace = true
mime_guess.workspace = true
reqwest = { workspace = true, optional = true }
send_wrapper.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx = { workspace = true, optional = true }
strum.workspace = true
strum_macros.workspace = true
url.workspace = true
tokio = { workspace = true, optional = true }
validator.workspace = true
web-sys.workspace = true

[features]
default = []
ssr = [
    "leptos/ssr",
    "leptos-fluent/axum",
    "leptos-fluent/ssr",
    "sphare_core_common/ssr",
    "sphare_core_user/ssr",
    "sphare_core_sphere/ssr",
    "dep:http",
    "dep:reqwest",
    "dep:sqlx",
    "dep:tokio",
]
