[package]
name = "sphare_iface_content"
version = "0.1.0"
edition = "2024"
description = "Content related interfaces"

[dependencies]
sphare_core_common = { path = "../../core/common", default-features = false }
sphare_core_user = { path = "../../core/user", default-features = false }
sphare_core_sphere = { path = "../../core/sphere", default-features = false }
sphare_core_content = { path = "../../core/content", default-features = false }

leptos.workspace = true
leptos_axum = { workspace = true, optional = true }

log.workspace = true
validator = { workspace = true, optional = true }

[features]
default = []
hydrate = [
    "leptos/hydrate",
]
ssr = [
    "leptos/ssr",
    "sphare_core_common/ssr",
    "sphare_core_user/ssr",
    "sphare_core_sphere/ssr",
    "sphare_core_content/ssr",
    "dep:leptos_axum",
    "dep:validator",

]
